# quarto-paper-template

./: .gitignore  .gitlab-ci.yml  .quartoignore  README.md  _quarto.yml  index.qmd  pyproject.toml
_filters/authors-block/: authors-block.lua  from_author_info_blocks.lua  utils.lua
_templates/: custom-reference-doc.docx
supplements/: supplement_1.qmd
